Add updated slides

--- a/slides/data_science_panel.html
+++ b/slides/data_science_panel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Rethinking the ways we use and gather data</title>
+    <title>Thinking creatively about how we use and gather data</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Laurie Baker" />
     <script src="libs/header-attrs-2.21/header-attrs.js"></script>
@@ -16,16 +16,17 @@
 
 
 
-background-image: 
-background-position: top right
+background-image: url(images/tidydata_5.jpg)
+background-position: bottom right
 background-size: contain
-class: middle, left
+class: left
 
-# Rethinking the ways we use and gather data
+.center[
+## **Thinking creatively about how we use and gather data**
 
-## Dr. Laurie Baker
+### MDIBL Data Science Panel,  20 Apr, 2023
+]
 
-### 20 Apr, 2023
 
 ---
 class: middle, left
@@ -316,7 +317,23 @@ RSpatial Data
 ]
 
 .pull-right[
-### **Afrimapr** Interactive tutorials on working with spatial data in R
+### **Afrimapr** interactive tutorials on working with spatial data in R
+]
+
+
+---
+# Community-engaged Data Science
+
+.pull-left[
+
+.center[
+&lt;iframe src="https://community-engaged-data-science.netlify.app/" width="700" height="416" frameBorder="0"&gt;&lt;/iframe&gt;
+
+]
+]
+
+.pull-right[
+### Teaching applied problem-solving
 ]
 
 
