Add Mapping Ocean Stories project to slides

--- a/slides/data_science_ecology.html
+++ b/slides/data_science_ecology.html
@@ -869,6 +869,67 @@ class: inverse, center, middle
 
 ---
 class: inverse, center, middle
+# Mapping Ocean Stories Background
+
+---
+class: center
+# Project Workflow
+
+&lt;figure&gt;
+    &lt;img src="images/workflow.png"
+         alt="Diagram of the Data Analysis Workflow" width="650" 
+     height="450"&gt;
+    &lt;figcaption&gt;Figure 1. Diagram of the mapping ocean stories data analysis workflow.&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+???
+
+The database is designed to record spatial, categorical, observational and temporal information about each activity (Figure 2). 
+
+---
+class: center
+# Database Structure
+
+&lt;figure&gt;
+    &lt;img src="images/database_structure.png"
+         alt="Diagram" width="650" 
+         height="450"&gt;
+         
+    &lt;figcaption&gt;Figure 2. MOS - Database Basic Structure.&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+???
+Spatial activities are categorized by coders by their domain, subdomain, and observation type to create a set of standardized observations that can be reliably compared later using queries, summaries, and other systematic methods (Figure 3). 
+
+---
+class: center
+# Project Codebook
+
+&lt;figure&gt;
+    &lt;img src="images/codebook.png"
+         alt="Diagram" width="650" 
+          height="450"&gt;
+    &lt;figcaption&gt;Figure 3. Subset of the codebook showing the domain, subdomain, observation type and observation levels for the fisheries domain.&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+???
+The spatial information for each activity is then classified by the geomethod and type of spatial information conveyed (Figure 4).
+
+---
+class: center
+# Spatial Classification Scheme
+
+&lt;figure&gt;
+    &lt;img src="images/spatial_classification_scheme.png"
+         alt="Diagram" width="650" 
+          height="450"&gt;
+    &lt;figcaption&gt;Figure 4. Spatial classification scheme by geomethod.&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+
+
+---
+class: inverse, center, middle
 # Courses I teach and am interested in teaching
 
 ---
@@ -897,6 +958,7 @@ class: center
 # Curriculum objectives
 
 &lt;svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;height:2em;" xmlns="http://www.w3.org/2000/svg"&gt;  &lt;path d="M501.1 395.7L384 278.6c-23.1-23.1-57.6-27.6-85.4-13.9L192 158.1V96L64 0 0 64l96 128h62.1l106.6 106.6c-13.6 27.8-9.2 62.3 13.9 85.4l117.1 117.1c14.6 14.6 38.2 14.6 52.7 0l52.7-52.7c14.5-14.6 14.5-38.2 0-52.7zM331.7 225c28.3 0 54.9 11 74.9 31l19.4 19.4c15.8-6.9 30.8-16.5 43.8-29.5 37.1-37.1 49.7-89.3 37.9-136.7-2.2-9-13.5-12.1-20.1-5.5l-74.4 74.4-67.9-11.3L334 98.9l74.4-74.4c6.6-6.6 3.4-17.9-5.7-20.2-47.4-11.7-99.6.9-136.6 37.9-28.5 28.5-41.9 66.1-41.2 103.6l82.1 82.1c8.1-1.9 16.5-2.9 24.7-2.9zm-103.9 82l-56.7-56.7L18.7 402.8c-25 25-25 65.5 0 90.5s65.5 25 90.5 0l123.6-123.6c-7.6-19.9-9.9-41.6-5-62.7zM64 472c-13.2 0-24-10.8-24-24 0-13.3 10.7-24 24-24s24 10.7 24 24c0 13.2-10.7 24-24 24z"&gt;&lt;/path&gt;&lt;/svg&gt; 
+
 ### Develop skills in data analysis and statistics and learn to apply these skills with an intersectional lens
 
 --
@@ -949,7 +1011,7 @@ class: inverse, center, middle
 class: inverse, center, middle
 # Intro to Epidemiological Modeling
 
-&lt;iframe src="https://coa-epi-modelling.netlify.app" width="516" height="716" frameBorder="0"&gt;&lt;/iframe&gt;
+&lt;iframe src="https://coa-epi-modelling.netlify.app" width="716" height="516" frameBorder="0"&gt;&lt;/iframe&gt;
 
 ---
 class: inverse, center, middle
