--- a/slides/data_science_ecology.html
+++ b/slides/data_science_ecology.html
@@ -528,6 +528,7 @@ V_{r,t+1} = v_{r,t} + X_{r,t}
 ### `\(v_{r,t}\)` newly vaccinated individuals drawn from a binomial distribution. 
 
 `\begin{eqnarray}
+\LARGE
 v_{r,t} \sim Bin(\nu\frac{S_{r,t}}{S_{r,t}+V_{r,t}}, S_{r,t})
 \end{eqnarray}`
 
@@ -827,8 +828,8 @@ Dr. Thomas Müller; Dr. Conrad Freuling; Patrick Wysocki
 
 Dr. Andy South (LSTM); Dr. Ahmadou Dicko (FAO, Senegal); Shelmith Kariuki (Nairobi, Kenya); Anelda Van der Walt (Talarify)
 
-**FCDO &amp; ONS, UK**:  
-Dr. Joseph Crispell; Nathan Begbie; Saliha Minhas; Jonathon Mellor; Richard Leyshon
+**College of the Atlantic and Rhumbline Maps**:  
+Natalie Springuel; Hillary Smith; Todd Little-Siebold; Galen Koch; Ben Meader
 
 ]
 
@@ -990,12 +991,9 @@ class: inverse, center, middle
 
 .left-column[
 
-&lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="images/fixed_wing_hungary.jpg" alt="Fixed wing aircraft used to distribute vaccines." width="400" /&gt;
-&lt;p class="caption"&gt;Fixed wing aircraft used to distribute vaccines.&lt;/p&gt;
-&lt;/div&gt;
-
 &lt;svg viewBox="0 0 576 512" style="height:1em;position:relative;display:inline-block;top:.1em;" xmlns="http://www.w3.org/2000/svg"&gt;  &lt;path d="M552 64H112c-20.858 0-38.643 13.377-45.248 32H24c-13.255 0-24 10.745-24 24v272c0 30.928 25.072 56 56 56h496c13.255 0 24-10.745 24-24V88c0-13.255-10.745-24-24-24zM48 392V144h16v248c0 4.411-3.589 8-8 8s-8-3.589-8-8zm480 8H111.422c.374-2.614.578-5.283.578-8V112h416v288zM172 280h136c6.627 0 12-5.373 12-12v-96c0-6.627-5.373-12-12-12H172c-6.627 0-12 5.373-12 12v96c0 6.627 5.373 12 12 12zm28-80h80v40h-80v-40zm-40 140v-24c0-6.627 5.373-12 12-12h136c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H172c-6.627 0-12-5.373-12-12zm192 0v-24c0-6.627 5.373-12 12-12h104c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H364c-6.627 0-12-5.373-12-12zm0-144v-24c0-6.627 5.373-12 12-12h104c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H364c-6.627 0-12-5.373-12-12zm0 72v-24c0-6.627 5.373-12 12-12h104c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H364c-6.627 0-12-5.373-12-12z"&gt;&lt;/path&gt;&lt;/svg&gt; Read more in *The Atlantic* article by Ed Yong ["That Time Europe Air-dropped Vaccine-loaded Chicken Heads to Bait Rabid Foxes"](https://www.theatlantic.com/science/archive/2015/12/that-time-europe-air-dropped-vaccine-loaded-chicken-heads-to-bait-rabid-foxes/417951/) 
+
+
 
 .footnote[Images: Friedrich Loeffler Institut]
 ]
